# tableturn-backend

./: .example.env  README.md  pyproject.toml
app/: __main__.py  containers.py  logger.py  main.py  ormconfig.py
app/auth/: containers.py  endpoints.py  services.py
app/common/authorization/: __init__.py  handler.py  kiosk.py
app/common/database/: __init__.py  config.py  manager.py  utils.py
app/common/entity_mixins/: __init__.py  field.py  uuid_mixin.py
app/common/exceptions/: __init__.py  auth_exception.py  base.py  entity_exception.py  user_exception.py
app/common/server/: __init__.py  response.py  schema.py
app/common/types/: __init__.py  typevar.py
app/common/utils/: env_validator.py  generate.py  logger.py  request.py  types.py
app/game/: containers.py  endpoints.py  repository.py  services.py
app/game/entities/: __init__.py  game.py
app/google/: containers.py  services.py
app/hello/: endpoints.py
app/hello/entities/: message.py
app/kiosk/: containers.py  endpoints.py  repository.py  services.py
app/kiosk/dto/: __init__.py  session.py
app/kiosk/entities/: __init__.py  kiosk.py
app/kiosk/session/: __init__.py  login.py
app/members/: containers.py  repository.py
app/members/entities/: __init__.py  member.py
app/room/: containers.py  endpoints.py  repository.py  services.py
app/room/session/: __init__.py  room.py
cli/: create_admin_user.py
test/: totp-room-code.py
